加入对应链接

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <small>技术：html+css+js+bootstrap</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search iconfont icon-inquiry"></i> </div>
-                <a href="http://38157_2sdx239.php.100dan.cn/index.html"> <img src="./img/yiliao.jpg" class="img-responsive" alt="企业站项目"></a></div>
+                <a href="http://38157_2sdx239.php.100dan.cn/index.html"> <img src="./img/yiliao.jpg" style="width:345px;height:260px;" class="img-responsive" alt="企业站项目"></a></div>
           </div>
         </div>
 		
@@ -178,11 +178,11 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://39828_jyki787.php.100dan.cn/index.html" target="_blank" title="可迪商城">可迪商城</a></h4>
-                <small>技术：HTML+CSS+JQuery</small>
+                <h4><a href="https://blog.csdn.net/zhuaaaa3944210" target="_blank" title="csdn">csdn</a></h4>
+                <small>技术：个人总结</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search iconfont icon-inquiry"></i> </div>
-                <a href="http://39828_jyki787.php.100dan.cn/index.html"><img src="./img/kedi.png" class="img-responsive" alt="可迪商城"></a></div>
+                <a href="http://39828_jyki787.php.100dan.cn/index.html"><img src="./img/kedi.jpg" class="img-responsive" style="width:345px;height:260px;" alt="技术：个人总结"></a></div>
           </div>
         </div>
 		
@@ -213,11 +213,11 @@
           <div class="portfolio-item">
             <div class="hover-bg">
               <div class="hover-text">
-                <h4><a href="http://zczapp1.duapp.com/" target="_blank" title="个人站">个人站</a></h4>
-                <small>技术：HTML+CSS+JQuery+bootstrap</small>
+                <h4><a href="https://www.sfkj666.com/fireweb/login;jsessionid=AF911BD75BDB721ADBEEDD8513F10930" target="_blank" title="山峰云平台">山峰云平台</a></h4>
+                <small>技术：jsp</small>
                 <div class="clearfix"></div>
                 <i class="fa fa-search iconfont icon-inquiry"></i> </div>
-              <img src="./img/05.jpg" class="img-responsive" alt="个人站">
+              <img src="./img/05.jpg" class="img-responsive" alt="云平台">
 			  </div>
           </div>
         </div>
@@ -248,12 +248,12 @@
 		  
             <div class="hover-bg"> 
               <div class="hover-text">
-                <h4><a href="http://yxrsan94.51zuopin.com/index.html" target="_blank" title="jd">天之诚</a></h4>
-                <small>技术：html+css+js</small>
-                <div class="clearfix iconfont icon-inquiry"></div>
+                <h4><a href="#"  onclick="return false" target="_blank" title="扫二维码进入">扫二维码进入小程序</a></h4>
+                <small>技术：微信小程序+js</small>
+                <div class="clearfix"></div>
                 <i class="fa fa-search iconfont icon-inquiry"></i> 
 				</div>
-              <img src="./img/08.jpg" class="img-responsive" alt="天之诚">
+              <img src="./img/xiaochengxu.jpg" class="img-responsive" alt="小程序">
 		    </div>
           </div>
         </div>
